--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for HTML-Auto-python
 
+0.0.5
+    - update copyright
+
 0.0.4
     - remove cgi package import
     - update copyright
